{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 83,
  "lineage": "1a6e80ba-2788-ec82-6c72-49c45b8533cf",
  "resources": [
    {
      "module": "module.my_security.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:security-group/sg-0d5b4d8d625dc2e37",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [],
            "id": "sg-0d5b4d8d625dc2e37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "User-service ports",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              }
            ],
            "name": "yidgar_security_group-20250319091627136100000001",
            "name_prefix": "yidgar_security_group-",
            "owner_id": "148761662110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yidgar_security_group"
            },
            "tags_all": {
              "Name": "yidgar_security_group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_security.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2853299801",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d5b4d8d625dc2e37",
            "security_group_rule_id": "sgr-039f1b714610f1b0b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_security.module.security_group.aws_security_group.this",
            "module.my_security.module.security_group.aws_security_group.this_name_prefix",
            "module.my_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_security.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "User-service ports",
            "from_port": 8080,
            "id": "sgrule-1768485329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5b4d8d625dc2e37",
            "security_group_rule_id": "sgr-05c4645b3bc93b3bc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_security.module.security_group.aws_security_group.this",
            "module.my_security.module.security_group.aws_security_group.this_name_prefix",
            "module.my_vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-280992213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5b4d8d625dc2e37",
            "security_group_rule_id": "sgr-0773e2608af4a79b8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_security.module.security_group.aws_security_group.this",
            "module.my_security.module.security_group.aws_security_group.this_name_prefix",
            "module.my_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6131159d4a8b933",
            "arn": "arn:aws:ec2:us-east-1:148761662110:elastic-ip/eipalloc-0b6131159d4a8b933",
            "association_id": "eipassoc-0bd83e7c53c9b0be6",
            "domain": "vpc",
            "id": "eipalloc-0b6131159d4a8b933",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08e18d7889ca9ca40",
            "private_dns": "ip-10-0-101-16.ec2.internal",
            "private_ip": "10.0.101.16",
            "public_dns": "ec2-34-203-112-95.compute-1.amazonaws.com",
            "public_ip": "34.203.112.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-0"
            },
            "tags_all": {
              "Name": "nat-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d1f0dba9ba69c8",
            "arn": "arn:aws:ec2:us-east-1:148761662110:elastic-ip/eipalloc-0b6d1f0dba9ba69c8",
            "association_id": "eipassoc-0558ee4a0f45e7b4f",
            "domain": "vpc",
            "id": "eipalloc-0b6d1f0dba9ba69c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-043c02e8108361a57",
            "private_dns": "ip-10-0-102-173.ec2.internal",
            "private_ip": "10.0.102.173",
            "public_dns": "ec2-54-205-20-208.compute-1.amazonaws.com",
            "public_ip": "54.205.20.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1"
            },
            "tags_all": {
              "Name": "nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c897020ff2c05ad",
            "arn": "arn:aws:ec2:us-east-1:148761662110:elastic-ip/eipalloc-01c897020ff2c05ad",
            "association_id": "eipassoc-00b116d84117cf4e1",
            "domain": "vpc",
            "id": "eipalloc-01c897020ff2c05ad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ae25289a0d293af",
            "private_dns": "ip-10-0-103-77.ec2.internal",
            "private_ip": "10.0.103.77",
            "public_dns": "ec2-44-196-147-21.compute-1.amazonaws.com",
            "public_ip": "44.196.147.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2"
            },
            "tags_all": {
              "Name": "nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6131159d4a8b933",
            "association_id": "eipassoc-0bd83e7c53c9b0be6",
            "connectivity_type": "public",
            "id": "nat-0800d018ffb4a1098",
            "network_interface_id": "eni-08e18d7889ca9ca40",
            "private_ip": "10.0.101.16",
            "public_ip": "34.203.112.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b918b26aa4e797d",
            "tags": {
              "Name": "nat-gateway-0"
            },
            "tags_all": {
              "Name": "nat-gateway-0"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d1f0dba9ba69c8",
            "association_id": "eipassoc-0558ee4a0f45e7b4f",
            "connectivity_type": "public",
            "id": "nat-0250c97da12933076",
            "network_interface_id": "eni-043c02e8108361a57",
            "private_ip": "10.0.102.173",
            "public_ip": "54.205.20.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045b5740ed1e62afa",
            "tags": {
              "Name": "nat-gateway-1"
            },
            "tags_all": {
              "Name": "nat-gateway-1"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c897020ff2c05ad",
            "association_id": "eipassoc-00b116d84117cf4e1",
            "connectivity_type": "public",
            "id": "nat-00c435ceac07352e8",
            "network_interface_id": "eni-01ae25289a0d293af",
            "private_ip": "10.0.103.77",
            "public_ip": "44.196.147.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-054f1b7c23680932a",
            "tags": {
              "Name": "nat-gateway-2"
            },
            "tags_all": {
              "Name": "nat-gateway-2"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-000206ff1f19cbb401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0800d018ffb4a1098",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000206ff1f19cbb40",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat_gateway",
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_route_table.private",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c8b6ed272512c06c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0250c97da12933076",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c8b6ed272512c06c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat_gateway",
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_route_table.private",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089894ea9010361e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00c435ceac07352e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089894ea9010361e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_nat_gateway.nat_gateway",
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_route_table.private",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d01b02ef65b6af4",
            "id": "r-rtb-0797003c8be3e9fdb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0797003c8be3e9fdb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_route_table.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:network-acl/acl-039955f9e7e1d7393",
            "default_network_acl_id": "acl-039955f9e7e1d7393",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039955f9e7e1d7393",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "148761662110",
            "subnet_ids": [
              "subnet-00b918b26aa4e797d",
              "subnet-045b5740ed1e62afa",
              "subnet-054f1b7c23680932a",
              "subnet-072a9cdc722148c18",
              "subnet-07c1d55f94b5eccdc",
              "subnet-0f34b908d69518d4b"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:route-table/rtb-0b11763ba1d3d41eb",
            "default_route_table_id": "rtb-0b11763ba1d3d41eb",
            "id": "rtb-0b11763ba1d3d41eb",
            "owner_id": "148761662110",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:security-group/sg-0787dba2a866cf695",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0787dba2a866cf695",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "148761662110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:internet-gateway/igw-08d01b02ef65b6af4",
            "id": "igw-08d01b02ef65b6af4",
            "owner_id": "148761662110",
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d01b02ef65b6af4",
            "id": "r-rtb-0797003c8be3e9fdb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0797003c8be3e9fdb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_internet_gateway.this",
            "module.my_vpc.module.vpc.aws_route_table.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:route-table/rtb-000206ff1f19cbb40",
            "id": "rtb-000206ff1f19cbb40",
            "owner_id": "148761662110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0800d018ffb4a1098",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:route-table/rtb-0c8b6ed272512c06c",
            "id": "rtb-0c8b6ed272512c06c",
            "owner_id": "148761662110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0250c97da12933076",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:route-table/rtb-089894ea9010361e3",
            "id": "rtb-089894ea9010361e3",
            "owner_id": "148761662110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c435ceac07352e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:route-table/rtb-0797003c8be3e9fdb",
            "id": "rtb-0797003c8be3e9fdb",
            "owner_id": "148761662110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d01b02ef65b6af4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054c7d3771c9d2f31",
            "route_table_id": "rtb-000206ff1f19cbb40",
            "subnet_id": "subnet-072a9cdc722148c18"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_route_table.private",
            "module.my_vpc.module.vpc.aws_subnet.private",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd93372a7f3807cd",
            "route_table_id": "rtb-0c8b6ed272512c06c",
            "subnet_id": "subnet-07c1d55f94b5eccdc"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_route_table.private",
            "module.my_vpc.module.vpc.aws_subnet.private",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08668544fc1affe68",
            "route_table_id": "rtb-089894ea9010361e3",
            "subnet_id": "subnet-0f34b908d69518d4b"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_route_table.private",
            "module.my_vpc.module.vpc.aws_subnet.private",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0543ceaf26e31225d",
            "route_table_id": "rtb-0797003c8be3e9fdb",
            "subnet_id": "subnet-00b918b26aa4e797d"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_route_table.public",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0decdd5ea5b1d2d3e",
            "route_table_id": "rtb-0797003c8be3e9fdb",
            "subnet_id": "subnet-045b5740ed1e62afa"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_route_table.public",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbb581da22cd7d87",
            "route_table_id": "rtb-0797003c8be3e9fdb",
            "subnet_id": "subnet-054f1b7c23680932a"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_route_table.public",
            "module.my_vpc.module.vpc.aws_subnet.public",
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:subnet/subnet-072a9cdc722148c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a9cdc722148c18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761662110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:subnet/subnet-07c1d55f94b5eccdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c1d55f94b5eccdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761662110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:subnet/subnet-0f34b908d69518d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f34b908d69518d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761662110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:subnet/subnet-00b918b26aa4e797d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b918b26aa4e797d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761662110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:subnet/subnet-045b5740ed1e62afa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b5740ed1e62afa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761662110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:subnet/subnet-054f1b7c23680932a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054f1b7c23680932a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761662110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-0863f407d38f0cab2"
          },
          "dependencies": [
            "module.my_vpc.module.vpc.aws_vpc.this",
            "module.my_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761662110:vpc/vpc-0863f407d38f0cab2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039955f9e7e1d7393",
            "default_route_table_id": "rtb-0b11763ba1d3d41eb",
            "default_security_group_id": "sg-0787dba2a866cf695",
            "dhcp_options_id": "dopt-054f25c61bee3f35b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0863f407d38f0cab2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b11763ba1d3d41eb",
            "owner_id": "148761662110",
            "tags": {
              "Environment": "dev",
              "Name": "yidgar-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "yidgar-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}